ADDED   progress bar to generate_config process
ADDED   multimodify of "assign_many" attributes (like contact_groups) now have a mode selection for how to apply the values: 
        override (as until now) or add as additional
ADDED   advanced-services which allow more liberty and can be assigned to multiple hosts and hostgroups

REMOVED 'extended_host_info.cfg' and 'extended_service_info.cfg' files. The original contents of those files are now written to 'hosts.cfg' 
        and 'services.cfg' respectively. Also, those properties are now available both on Collector and Monitor servers.
REMOVED 'call_ajax.php' -> replaced with 'call_file.php'
REMOVED add_item.php -> implemented as handle_item.php
REMOVED modify_item.php -> implemented as handle_item.php
REMOVED multimodify_attr.php -> implemented as handle_item.php
REMOVED constant "CRYPT_SALT" -> NConf will now use the SALT correct, generating individual salt's or read from current password, as encryption should be made
REMOVED include/js/ajax-dynamic-content.js -> functionality replaced with jQuery & jQuery UI
REMOVED the -n parameter for all import scripts. No more need to specify the naming attribute when importing from various sources.

MOVED   config.orig/main.php (config/main.php) -> moved to root NConf directory (nconf/)
MOVED   include/history_tab.php -> moved to tabs directory include/tabs/history.php

CHANGED step2 will now redirect directly to 'modify service' which will add all services of selected host-preset
CHANGED 'message'-function: INFO,DEBUG etc. are now handled over the new class (NConf_DEBUG). Old message function only forwards to new class.
        Also the output of all types (INFO,DEBUG,ERROR and CRITICAL) is done over this class.
CHANGED Services view (on a host). Service list and adding services is now solved with jQuery/AJAX functions.
CHANGED Administration GUI:
        - 'attributes': add & modify improved GUI with help
        - 'classes': add & modify improved GUI with help