@@ -56,7 +56,6 @@ define('ALLOW_DEPLOYMENT', 1);
 #
 # Static configuration files
 #
-# CAUTION: Static files will not be syntax checked by NConf!
 # List of folders containing additional files that you would like to make editable within NConf (basic text editing). 
 # We call these files 'static files', because they are not generated by NConf. 
 # All folders listed here will be included in the output file, together with the generated config. 
@@ -67,6 +66,13 @@ $STATIC_CONFIG = array("static_cfg");
 # If security permits it, you could make your active Nagios configuration editable in NConf directly. 
 # We discourage users from doing this though, because there is a risk that they could accidentally damage their Nagios configuration.
 #$STATIC_CONFIG = array("static_cfg", "/etc/nagios");
+
+#
+# Syntax checking for static config folders
+# Static config will be treated as "global" config. Syntax checking will be run for each Collector / Monitor server.
+# In a distributed monitoring setup, you might have to disable syntax checking, if you are getting errors that items don't exist on certain servers.
+#
+define('CHECK_STATIC_SYNTAX', 1);
 
 #
 # These groups will always be added to any host or service, regardless of what is linked in the GUI. 
