@@ -58,6 +58,7 @@ ADDED   progress bar to generate_config process
 ADDED   multimodify of "assign_many" attributes (like contact_groups) now have a mode selection for how to apply the values: 
         override (as until now) or add as additional
 ADDED   advanced-services which allow more liberty and can be assigned to multiple hosts and hostgroups
+ADDED   syntax checking for static config folders. This functionality can be enabled/disabled using the new CHECK_STATIC_SYNTAX constant.
 
 REMOVED 'extended_host_info.cfg' and 'extended_service_info.cfg' files. The original contents of those files are now written to 'hosts.cfg' 
         and 'services.cfg' respectively. Also, those properties are now available both on Collector and Monitor servers.
